Fixed visibility of dialog with bootstrap modal.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,3 +14,7 @@
  *= require_self
  *= require_tree .
  */
+
+.rs_dialog_holder {
+  z-index: 1051
+}
